--- a/custom.css
+++ b/custom.css
@@ -1,14 +1,57 @@
+html{
+   width: 100%;
+   height: 100%;
+}
+
+header{
+   width: 100%;
+   height: 100%;
+}
+
+body{
+   width: 100%;
+   height: 100%;
+   font-family: 'Roboto', sans-serif;
+}
+
+.navbar-default{
+   background-color: rgb(255,255,255);
+   border: none;
+   box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.2);
+}
+
+@media (min-width: 768px){
+   .navbar-default{
+      padding: 30px 100px;
+   }
+
+   .navbar-default li{
+      margin-left: 25px;
+      font-size: 20px;
+   }
+}
+
+.navbar-default .navbar-nav>li>a{
+   color: rgb(180,180,180);
+   transition: 0.5s;
+}
+
+.navbar-default .navbar-nav>li>a:hover{
+   color: rgba(54,45,104,0.85);
+   transition: 0.5s;
+}
+
 #footer{
 	background-color: rgba(54,45,104,0.85);
 	color: white;
 	text-align: center;
 	padding: 30px;
 }
-.redessociais{	
+.redessociais{
 	list-style: none;
 }
 
-.sociais p{	
+.sociais p{
 	margin-left: 15px ;
 }
 
