--- a/custom.css
+++ b/custom.css
@@ -15,6 +15,7 @@ body{
    clear: both;
 }
 
+/* header */
 .navbar-default{
    background-color: rgb(255,255,255);
    border: none;
@@ -44,7 +45,7 @@ body{
    color: rgba(54,45,104,0.85);
    transition: 0.5s;
 }
-
+/* Pagina receitas */
 #destaques{
    padding: 30px 0px;
 }
@@ -142,7 +143,7 @@ body{
    opacity: 1;
    transition: 0.5s;
 }
-
+/* Footer */
 #footer{
 	background-color: rgba(54,45,104,0.85);
 	color: white;
@@ -170,3 +171,93 @@ body{
 .redessociais li img{
 	margin-bottom: -10px;
 }
+
+
+/* Pagina sobre */
+.sobre{
+   padding-top: 20px;
+   padding-left: 100px;
+   padding-bottom: 30px;
+}
+.sobre h2{
+   color: rgba(54,45,104,0.85);
+   font-size: 50px;
+   text-align: center;
+   font-family: PT Sans Narrow;
+
+}
+.chef{
+   text-align: center;
+}
+.chef1{
+   width: 188px;
+   margin-left: 350px;
+}
+
+.chef2{
+   width: 188px;
+   margin-left: 40px;
+}
+.sobre p{
+   font-size: 20px;
+   margin: auto 50px;
+   margin-top: 40px;
+}
+.equipe{
+   text-align: center;
+}
+.equipe img{
+   border-radius: 500px;
+}
+
+.imagemFundoChef{
+   position: relative;
+   height: 188px;
+   width: 188px;
+   background-position: center;
+   border-radius: 500px;
+   box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.1);
+}
+
+.textoFundoChef{
+   opacity: 0;
+   border-radius: 500px;
+   width: 100%;
+   height: 100%;
+   transition: 0.5s;
+   background-color: rgba(54,45,104,0.7);
+   position: absolute;
+
+}
+
+.textoFundoChef h2{
+   padding-top: 50px;
+   text-align: center;
+   color: #fff;
+}
+.imagemFundoChef:hover .textoFundoChef{
+   opacity: 1;
+   transition: 0.5s;
+}
+
+@media (max-width: 768px){
+.sobre{
+   margin: 0px; 
+   padding-right: 20px;
+   padding-left:10px;
+}
+.sobre h2{
+   font-size: 30px;
+}
+.sobre p{
+   font-size: 14px;
+   text-align: justify;
+}
+.chef1{
+   margin: auto;
+}
+.chef2{
+   margin: auto;
+}
+}
+
