Correção responsividade e texto na Sobre

--- a/custom.css
+++ b/custom.css
@@ -227,13 +227,13 @@ body{
    transition: 0.5s;
    background-color: rgba(54,45,104,0.7);
    position: absolute;
-
 }
 
 .textoFundoChef h2{
-   padding-top: 50px;
+   padding-top: 55px;
    text-align: center;
    color: #fff;
+   font-size: 30px;
 }
 .imagemFundoChef:hover .textoFundoChef{
    opacity: 1;
